       visible.
   * Added a version dialog button to the title screen, replacing the Paths
     option previously found in Preferences -> General.
 * WML engine:
   * Added support for mod_x,mod_y= in [terrain_graphics].
   * Added support for has_flag= in terrain graphics [variant].
   * Added category= to [label] - allows grouping labels so that players can
     show/hide them
 * Editor:
   * Added Category field and color sliders to the Edit Label panel.
 * Miscellaneous and bug fixes:
   * Removed legacy filesystem API implementation.
   * Fixed Generate Map dialog bug that caused last choice of map
     generator to not be actually selected (bug #23711).
   * Fixed unbound memory read in internal time formatting code with
     specially-crafted input.
   * Child wesnothd processes spawned by the Host Network Game option on
     Windows now display console output directly instead of using stdout.txt
     and stderr.txt.
   * Remember last selected modifications separately for single and multiplayer.
   * Fixed SDL2 compilation issues.
   * Fixed RECRUIT_UNIT_VARIATIONS core WML macro leaking an internal temporary
     variable ($recruited_unit_random_variation).

Version 1.13.1:
 * Security fixes:
   * Disallowed inclusion of .pbl files from WML, independent of extension
     case (CVE-2015-5069, CVE-2015-5070, bug #23504).
 * AI:
   * Fast Micro AI: exclude hidden enemies from attack evaluation by default;
     add optional key attack_hidden_enemies to override this
   * Lua AI helper functions: fix bug crashing the AI when number= is not set in
     a unit attack definition
   * Micro AIs: add a warning and avoid crash when a non-existing side is used
     in the [micro_ai] tag
 * Campaigns:
   * Dead Water:
     * The Stun effect now expires at the stunned unit's side turn end
   * Under the Burning Suns:
     * The Stun effect now expires at the stunned unit's side turn end
 * Editor: