@@ -36,6 +36,8 @@ Version 1.13.1+dev:
    * Added support for has_flag= in terrain graphics [variant].
    * Added category= to [label] - allows grouping labels so that players can
      show/hide them
+   * The WML preprocessor now writes warnings to stderr for macros redefined
+     without #undef, to help detect unintentional name clashes.
  * Editor:
    * Added Category field and color sliders to the Edit Label panel.
  * Miscellaneous and bug fixes:
